--- a/fraud/src/main/resources/application-kube.yml
+++ b/fraud/src/main/resources/application-kube.yml
@@ -6,7 +6,7 @@ spring:
     name: fraud
   datasource:
     password: password
-    url: jdbc:postgresql://localhost:5432/fraud
+    url: jdbc:postgresql://postgres:5432/fraud
     username: amigoscode
   jpa:
     hibernate:
@@ -17,10 +17,9 @@ spring:
         format_sql: true
     show-sql: true
   zipkin:
-    base-url: http://localhost:9411
+    base-url: http://zipkin:9411
 
 eureka:
   client:
-    enabled: false
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka
